storing hashed passwords

--- a/test/users.yaml
+++ b/test/users.yaml
@@ -1,1 +1,2 @@
 admin: $2a$10$EOOtVD/vwsWPaMObc7pba.gHUVxeZ7x5cz2vKNbET/em6yKkw0Jma
+ben: $2a$10$7GzjusZhdZuwESTf99VXyeqM1QU13CzAZE.KE/k28EUNH4G4l9YN2
